# QAgents

./: .gitattributes  .gitignore  README.md  TODO.md  analise_estatistica_resultados.json  catalyst-learnings.md  learnings.md  pyproject.toml  repomix-output.xml  repomix.config.json  requirements.txt  spec-f373fb2531.json  test.sh  testgpu.sh  testing-strongly-entangling.py
.history/: pyproject_20250625174019.toml  requirements_20250625172710.txt
article/: main.bbl  main.tex
classical/: Análise base de dados - Projeto Segurança.ipynb  Análise base de dados - Projeto Segurança.py  Class Adaptations.md  Classificação_QCyber.py  Detecção_Avançada_de_Outliers_com_Isolation_Forest_e_Z_Scor.py  _artifacts_runtime.py  _dataset_runtime.py  edge_iiotset_analysis_report.md  lates_to_be_change.md  main.py  prepare_specialist_dataset.py  pyproject.toml  summary.md
classical/reports/: metodologia.tex  resultados.tex
configs/: label_group_map_edge_iot.json
deriv_qnode_forward/: 0_deriv_qnode_forward.mlir  1_AfterQuantumCompilationStage.mlir  2_AfterHLOLoweringStage.mlir  3_AfterGradientLoweringStage.mlir  4_AfterBufferizationStage.mlir  5_AfterMLIRToLLVMDialectConversion.mlir  6_AfterLLVMIRTranslation.ll  7_AfterO2OptPasses.ll  8_AfterEnzymePasses.ll
models/: 1_edgeiiot_perf_L3_C6_s1337.pt  QML_ML-EdgeIIoT_20251118-173419.pt  _smoke_catalyst_fused5.pt  _smoke_catalyst_fused5_gpu.pt  _smoke_compiled_fix.pt  _smoke_compiled_fix_v2.pt  _smoke_compiled_fix_v3.pt  _smoke_logits_adam.pt  _smoke_no_fallbacks.pt  _smoke_optax_adam_cpu.pt  _smoke_optax_adam_cpu_2ep.pt  _smoke_optax_adam_gpu.pt  _smoke_optax_adam_gpu_2ep.pt  _smoke_perf_patch.pt  _smoke_restored_cpu.pt  _smoke_restored_gpu.pt  edgeiiot_angle_embedding_y_strongly_entangling_L3_s42_ca87d1071f.pt  edgeiiot_angle_embedding_y_strongly_entangling_L4_s42_723cc474cd.pt  edgeiiot_angle_pair_xy_strongly_entangling_L3_s42_03b829c936.pt  edgeiiot_bin_pls8_L4_20260128-115544.pt  edgeiiot_bin_pls8_L4_20260129-102454.pt  edgeiiot_bin_pls8_L4_20260129-113753.pt  edgeiiot_bin_pls8_L4_20260129-113830.pt  edgeiiot_bin_pls8_L4_20260129-141223.pt  edgeiiot_bin_pls8_L4_20260206-140746.pt  edgeiiot_bin_pls8_L4_20260206-141101.pt  edgeiiot_bin_pls8_L4_20260206-142715.pt  edgeiiot_bin_pls8_L4_20260206-142858.pt  edgeiiot_perf_L3_C6_s1337.pt  (+9 more)
(+60 files in other folders)
