[project]
name = "qml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pennylane-lightning[gpu]==0.41.1",
    "pennylane==0.41.1",
    "colorama==0.4.6",
    "ipykernel==6.29.5",
    "langchain-anthropic==0.3.15",
    "langchain-community==0.3.26",
    "langchain-ollama==0.3.3",
    "langgraph==0.4.10",
    "matplotlib==3.10.3",
    "pandas==2.3.0",
    "scikit-learn==1.7.0",
    "ruff>=0.12.11",
    "torch>=2.8.0",
    "plotly>=6.3.1",
    "wandb>=0.22.3",
    "catkin-pkg>=1.1.0",
]

[uv.source]
src = { path = "src" }
