[project]
name = "qml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pennylane-lightning[gpu]==0.44.0",
    "pennylane==0.44.0",
    "pennylane-catalyst>=0.9.0",
    "jax[cuda12]>=0.4.30",
    "optax>=0.2.6",
    "chex>=0.1.91",
    "colorama==0.4.6",
    "ipykernel==7.1.0",
    "matplotlib==3.10.8",
    "pandas==3.0.0",
    "scikit-learn==1.8.0",
    "ruff>=0.14.14",
    "torch>=2.10.0",
    "plotly>=6.5.2",
    "wandb>=0.24.0",
    "catkin-pkg>=1.1.0",
]
