[project]
name = "qml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "pennylane==0.44.0",
    "pennylane-catalyst>=0.14.0",
    "jax[cpu]==0.7.1",
    "optax>=0.2.6",
    "chex>=0.1.91",
    "colorama==0.4.6",
    "ipykernel==7.2.0",
    "matplotlib==3.10.8",
    "pandas==3.0.0",
    "scikit-learn==1.8.0",
    "ruff>=0.15.0",
    "torch>=2.10.0",
    "plotly>=6.5.2",
    "wandb>=0.24.1",
    "catkin-pkg>=1.1.0",
    "pyperf",
]

[tool.uv.workspace]
members = [
    "classical",
]
