[project]
name = "classical-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "ipython>=8.0.0",
    "kaleido>=0.2.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=2.4.0",
    "plotly>=6.5.2",
    "polars>=1.38.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
]
